Closed Bug 432361 Opened 16 years ago Closed 15 years ago

"Assertion failure: script->code[offset] == JSOP_NOP" with trap, dis

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: jorendorff)

Details

(Keywords: assertion, fixed1.9.1, testcase, Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

function f() { M:x }
trap(f, 0, "");
dis(f);

Assertion failure: script->code[offset] == JSOP_NOP, at js.c:1234
Disassembler needs better smarts for handling JSOP_TRAP, it seems.
Still happens on tm branch (with crowder's updated dis patch)
Happens both without and with crowder's dis patch.
Attached patch v1Splinter Review
This depends on the patch in 463239.
Assignee: general → jorendorff
Status: NEW → ASSIGNED
Attachment #361550 - Flags: review?(crowder)
Attachment #361550 - Flags: review?(crowder) → review+
http://hg.mozilla.org/tracemonkey/rev/1ed2d8b3c28d
Whiteboard: fixed-in-tracemonkey
(In reply to comment #5)
> http://hg.mozilla.org/tracemonkey/rev/1ed2d8b3c28d

(In reply to comment #6)
> http://hg.mozilla.org/releases/mozilla-1.9.1/rev/e9681e3d377f

Has this landed on mozilla-central? (about 3 weeks have passed) If so, this can be resolved fixed...
Yes, this landed long ago.
http://hg.mozilla.org/mozilla-central/rev/1ed2d8b3c28d
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: