Bug 432361 - "Assertion failure: script->code[offset] == JSOP_NOP" with trap, dis. r=crowder.